Fixed arrow issue on mobile view

--- a/src/component/CheckoutAddressBook/CheckoutAddressBook.style.scss
+++ b/src/component/CheckoutAddressBook/CheckoutAddressBook.style.scss
@@ -36,6 +36,9 @@
       text-align: left;
 
       &-EditButton {
+        @include mobile {
+          display: flex;
+        }
         flex-direction: row;
         justify-content: space-between;
         &_isArabic {
@@ -218,11 +221,11 @@
       }
     }
   }
-  .CheckoutAddressForm{
-    &_isGuestForm{
-      .Field_type_select{
-        .FieldSelect-Options{
-          .FieldSelect-Option{
+  .CheckoutAddressForm {
+    &_isGuestForm {
+      .Field_type_select {
+        .FieldSelect-Options {
+          .FieldSelect-Option {
             text-transform: capitalize;
           }
         }
